--- a/index.html
+++ b/index.html
@@ -1,121 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calculator</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:600,700"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/ico" href="./favicon.ico" />
-    <link rel="stylesheet" href="./style.css" />
+    <title>Calculator</title>
   </head>
   <body>
-    <div class="main">
-      <form name="form">
-        <input class="textview" name="textview" />
-      </form>
-      <table>
-        <tr>
-          <td>
-            <input class="button" type="button" value="C" onclick="clean()" />
-          </td>
-          <td>
-            <input class="button" type="button" value="<" onclick="back()" />
-          </td>
-          <td>
-            <input
-              class="button"
-              type="button"
-              value="/"
-              onclick="insert('/')"
-            />
-          </td>
-          <td>
-            <input
-              class="button"
-              type="button"
-              value="x"
-              onclick="insert('*')"
-            />
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <input class="button" type="button" value="7" onclick="insert(7)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="8" onclick="insert(8)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="9" onclick="insert(9)" />
-          </td>
-          <td>
-            <input
-              class="button"
-              type="button"
-              value="-"
-              onclick="insert('-')"
-            />
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <input class="button" type="button" value="4" onclick="insert(4)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="5" onclick="insert(5)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="6" onclick="insert(6)" />
-          </td>
-          <td>
-            <input
-              class="button"
-              type="button"
-              value="+"
-              onclick="insert('+')"
-            />
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <input class="button" type="button" value="1" onclick="insert(1)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="2" onclick="insert(2)" />
-          </td>
-          <td>
-            <input class="button" type="button" value="3" onclick="insert(3)" />
-          </td>
-          <td rowspan="5">
-            <input
-              style="height: 106px;"
-              class="button"
-              type="button"
-              value="="
-              onclick="equal()"
-            />
-          </td>
-        </tr>
-        <tr>
-          <td colspan="2">
-            <input
-              style="width: 106px;"
-              class="button"
-              type="button"
-              value="0"
-              onclick="insert(0)"
-            />
-          </td>
-          <td>
-            <input
-              class="button"
-              type="button"
-              value="."
-              onclick="insert('.')"
-            />
-          </td>
-        </tr>
-      </table>
+    <div id="container">
+      <div id="calculator">
+        <div id="result">
+          <div id="history">
+            <p id="history-value"></p>
+          </div>
+          <div id="output">
+            <p id="output-value"></p>
+          </div>
+        </div>
+        <div id="keyboard">
+          <button class="operator" id="clear">C</button>
+          <button class="operator" id="backspace">CE</button>
+          <button class="operator" id="%">%</button>
+          <button class="operator" id="/">&#247;</button>
+          <button class="number" id="7">7</button>
+          <button class="number" id="8">8</button>
+          <button class="number" id="9">9</button>
+          <button class="operator" id="*">&times;</button>
+          <button class="number" id="4">4</button>
+          <button class="number" id="5">5</button>
+          <button class="number" id="6">6</button>
+          <button class="operator" id="-">-</button>
+          <button class="number" id="1">1</button>
+          <button class="number" id="2">2</button>
+          <button class="number" id="3">3</button>
+          <button class="operator" id="+">+</button>
+          <button class="empty" id="empty"></button>
+          <button class="number" id="0">0</button>
+          <button class="empty" id="empty"></button>
+          <button class="operator" id="=">=</button>
+        </div>
+      </div>
     </div>
-    <script src="./main.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
